fix on mobile

--- a/components/preweb/button/button.module.css
+++ b/components/preweb/button/button.module.css
@@ -6,12 +6,12 @@
   justify-items: left;
   border: solid black 1px;
   background: white;
-  height: 4rem;
   padding-left: 2rem;
   padding-right: 1rem;
   grid-template-columns: 2rem 1fr 2rem;
   grid-gap: 2rem;
-  height: 5rem;
+  min-height: 5rem;
+  cursor: pointer;
 }
 
 .button:hover {
