--- a/components/preweb/preweb.module.css
+++ b/components/preweb/preweb.module.css
@@ -16,11 +16,16 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-between;
+  align-items: center;
   padding-bottom: 4rem;
 }
 
 .preMenu a {
   font-size: 4rem;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 1000px) {
@@ -39,6 +44,5 @@
 .imgCover {
   grid-row: 1;
   justify-self: center;
-  height: 100%;
-  max-height: 500px;
+  max-width: 30vh;
 }
